[WIT-2969] Implement validation and unprovision endpoints